@@ -16,3 +16,4 @@
 <test.*>:                use_batteries
 <test_flush.*>:          use_batteries
 <test_version.*>:        use_batteries
+<test_split.*>:          use_batteries
